--- a/notebooks/create_gazetteers.ipynb
+++ b/notebooks/create_gazetteers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7353275b-a64c-4e70-9524-6edcb4833b01",
    "metadata": {},
    "outputs": [],
@@ -134,18 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8786c991-4f5c-4267-a769-968b31c35c5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_gazetteers_from_collection(output_dir, entity_types, gazetteers_dir):\n",
     "    for label, entity_types in entity_types.items():\n",
+    "        output_file_path = os.path.join(output_dir, f\"eng-hltcoe-{label}.txt\")\n",
+    "        with open(output_file_path, \"w\") as out_file:\n",
     "        \n",
-    "        for entity_type in entity_types:\n",
-    "            \n",
-    "            output_file_path = os.path.join(output_dir, f\"eng-hltcoe-{label}.txt\")\n",
-    "            with open(output_file_path, \"w\") as out_file:\n",
+    "            for entity_type in entity_types:\n",
     "\n",
     "                for filename in [f\"eng-{entity_type}-name-wd.txt\", f\"eng-{entity_type}-alias-wd.txt\"]:\n",
     "                    \n",
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "9ef9f74f-7011-4bdb-963a-0bb08607e7a8",
    "metadata": {},
    "outputs": [],
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "8d1658bf-5378-4f47-aca4-8bb936623199",
    "metadata": {},
    "outputs": [],
@@ -283,8 +282,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24f23380-de9f-419d-9218-fe67061dae93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entity_types = {\n",
+    "    \"CW\": [\n",
+    "        \"FILM\",\n",
+    "        \"MUSICALWOA\",\n",
+    "        \"SOFTWARE\",\n",
+    "        \"TVSERIES\",\n",
+    "        \"MAGAZINE\",\n",
+    "        \"LITERARYWORK\",\n",
+    "        \"MAGAZINE\",\n",
+    "        \"CREATIVEWORK\",\n",
+    "    ],\n",
+    "    \"CORP\": [\n",
+    "        \"BUSINESS\",\n",
+    "        \"CORPORATION\",\n",
+    "    ],\n",
+    "    \"PROD\": [\n",
+    "        \"EQUIPMENT\",\n",
+    "        \"FOODPRODUCT\",\n",
+    "        \"PRODUCTMODEL\",\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "save_gazetteers_from_collection(\n",
+    "    output_dir=GAZETTEER_OUTPUT_DIR,\n",
+    "    entity_types=entity_types,\n",
+    "    gazetteers_dir=\"/home/christoph/Projects/research/tmp_repos/gazetteer-collection/data/\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e180206e-4978-49ed-abf6-3f8fa63a53f6",
    "metadata": {},
    "outputs": [],
    "source": []
